Add place search for remote notes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   </header>
 
   <main class="content">
+    <form id="searchForm">
+      <input id="searchQuery" placeholder="Search for a place" />
+      <button type="submit">Search</button>
+    </form>
+    <div id="searchResult"></div>
     <ul id="notesList"></ul>
 
     <form id="noteForm">
