Add app usage description to main page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </header>
 
   <main class="content">
+    <p class="instructions">
+      Search for a place or use your current location, then add notes to remember
+      important details. Use the "+" button to quickly capture a thought.
+    </p>
     <form id="searchForm">
       <input id="searchQuery" placeholder="Search for a place" />
       <button type="submit">Search</button>
