Add note search by text or location

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <button type="submit">Search</button>
     </form>
     <div id="searchResult"></div>
+    <form id="noteSearchForm">
+      <input id="noteSearchQuery" placeholder="Search notes by text or place" />
+      <button type="submit">Find notes</button>
+    </form>
     <ul id="notesList"></ul>
 
     <form id="noteForm">
